# murf

./: DAY26_TESTING_GUIDE.md  LOCAL_SETUP.md  README.md  SETUP.md  VIDEO_DEMO_GUIDE.md  WEATHER_API_SETUP.md  ai_prompt_templates.py  check_api_keys.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  run.py  run_voxaura.py  setup_day20.py  setup_environment.py  simulate_errors.py  start_clean.py  start_server.sh  start_voxaura.py  test_day20_murf.py  test_day21.py  test_imports.py  test_streaming.py  test_weather_integration.py  test_websocket.py  tts_service.py
attached_assets/: Pasted--VoxAura-AI-Complete-Design-Prompt-Project-Overview-Create-a-premium-voice-AI-assistant-in-1756037848686_1756037848686.txt  Pasted--workspace-python-app-py-Traceback-most-recent-call-last-File-home-runner-workspace-app-p-1755778858347_1755778858348.txt  Pasted--workspace-python-start-clean-py-VoxAura-AI-Voice-Agent-Clean-Startup--1755779103811_1755779103813.txt  Pasted--workspace-python-start-clean-py-VoxAura-AI-Voice-Agent-Clean-Startup--1755779558693_1755779558693.txt  Pasted-error-Initializing-VoxAura-Client-agent-chat-voxaura-1755784956503-99g7ev4rov-history-1-Fail-1755785160438_1755785160439.txt  Pasted-python-app-py-Traceback-most-recent-call-last-File-home-runner-workspace-app-py-line-12--1755757681326_1755757681331.txt
instance/: tts_client.db
schemas/: __init__.py  requests.py  responses.py
services/: __init__.py  llm_service.py  murf_websocket_service.py  pdf_service.py  realtime_stt_service.py  stt_service.py  study_assistant_service.py  tts_service.py  (+3 more)
(+11 files in other folders)
