[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "assemblyai>=0.42.1",
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.29.0",
    "gtts>=2.5.4",
    "gunicorn>=23.0.0",
    "murf>=2.0.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "sift-stack-py>=0.8.2",
    "sqlalchemy>=2.0.42",
    "werkzeug>=3.1.3",
    "pydantic>=2.11.7",
]
